feat: check role
