# src/internal/api/user.controller.go
@@ -10,6 +10,36 @@ type UserController struct {
 	Service *UserService
 }
 
+func (s *UserController) HandlePostUnban(g *gin.Context) {
+	var err error
+	req := &pb.PostUserActiveRequest{
+		Id:       g.Param("id"),
+		Value:    true,
+		CallerId: g.GetString("uid"),
+	}
+	res, err := s.Service.Active(req)
+	if err != nil {
+		lib.BadRequest(g, err)
+		return
+	}
+	lib.Success(g, res)
+}
+
+func (s *UserController) HandlePostBan(g *gin.Context) {
+	var err error
+	req := &pb.PostUserActiveRequest{
+		Id:       g.Param("id"),
+		Value:    false,
+		CallerId: g.GetString("uid"),
+	}
+	res, err := s.Service.Active(req)
+	if err != nil {
+		lib.BadRequest(g, err)
+		return
+	}
+	lib.Success(g, res)
+}
+
 func (s *UserController) HandleGet(g *gin.Context) {
 	var err error
 	req := &pb.GetUsersRequest{
@@ -21,6 +51,23 @@ func (s *UserController) HandleGet(g *gin.Context) {
 		Offset:     g.Query("offset"),
 	}
 	res, err := s.Service.ListUsers(req)
+	if err != nil {
+		lib.BadRequest(g, err)
+		return
+	}
+	lib.Success(g, res)
+}
+
+func (s *UserController) HandlePostIssue(g *gin.Context) {
+	var req pb.PostUserIssueRequest
+	var err error
+	err = lib.GetBody(g, &req)
+	if err != nil {
+		lib.BadRequest(g, err)
+		return
+	}
+	req.Id = g.GetString("uid")
+	res, err := s.Service.Issue(&req)
 	if err != nil {
 		lib.BadRequest(g, err)
 		return
